Fix table export collapse

--- a/frontend/src/table/table.css
+++ b/frontend/src/table/table.css
@@ -2,10 +2,6 @@ h2[aria-expanded=true] svg {
 	transform: rotate(90deg);
 }
 
-table.collapse.in {
-	display: table;
-}
-
 table {
 	table-layout: fixed;
 	width: auto !important;
